--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.19",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.8.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "mongoose": "^7.6.1",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1"
   }
 }
