--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.ts"
+    "dev": "nodemon app.ts",
+    "postinstall": "link-module-alias"
+  },
+  "_moduleAliases": {
+    "@": "."
   },
   "keywords": [],
   "author": "",
@@ -16,6 +20,7 @@
     "@types/node": "^20.8.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "link-module-alias": "^1.2.0",
     "mongoose": "^7.6.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
