--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postinstall": "link-module-alias"
   },
   "_moduleAliases": {
-    "@": "."
+    "~@src": "src/"
   },
   "keywords": [],
   "author": "",
