--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.ts",
+    "start": "ts-node dist/app.js",
+    "build": "tsc -p .",
     "postinstall": "link-module-alias"
   },
   "_moduleAliases": {
